k8s/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deployment
  namespace: notes-app-ns
  labels:
    app: nginx-app-label
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app-label
  template:
    metadata:
      labels:
        app: nginx-app-label
    spec:
      containers:
      - name: nginx-app-container
        image: nginx:1.30.4
        ports:
        - containerPort: 80
