k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-nginx-ingress
  namespace: notes-app-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: django-app-service
            port:
              number: 8005
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-app-service
            port:
              number: 8090
